--- a/Xam.Plugin.DownloadManager.WinPhone/Xam.Plugin.DownloadManager.WinPhone81.csproj
+++ b/Xam.Plugin.DownloadManager.WinPhone/Xam.Plugin.DownloadManager.WinPhone81.csproj
@@ -10,7 +10,7 @@
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Xam.Plugin.DownloadManager.WinPhone</RootNamespace>
-    <AssemblyName>Xam.Plugin.DownloadManager.WinPhone81</AssemblyName>
+    <AssemblyName>Xam.Plugin.DownloadManager.WinPhone</AssemblyName>
     <DefaultLanguage>en-US</DefaultLanguage>
     <TargetPlatformVersion>8.1</TargetPlatformVersion>
     <MinimumVisualStudioVersion>12</MinimumVisualStudioVersion>
@@ -36,6 +36,7 @@
     <DefineConstants>TRACE;NETFX_CORE;WINDOWS_PHONE_APP</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <DocumentationFile>bin\Release\Xam.Plugin.DownloadManager.WinPhone.xml</DocumentationFile>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|ARM'">
     <DebugSymbols>true</DebugSymbols>
