--- a/Xam.Plugin.DownloadManager.Android/Xam.Plugin.DownloadManager.Android.csproj
+++ b/Xam.Plugin.DownloadManager.Android/Xam.Plugin.DownloadManager.Android.csproj
@@ -10,7 +10,7 @@
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Xam.Plugin.DownloadManager.Droid</RootNamespace>
-    <AssemblyName>Xam.Plugin.DownloadManager.Android</AssemblyName>
+    <AssemblyName>Xam.Plugin.DownloadManager.Droid</AssemblyName>
     <FileAlignment>512</FileAlignment>
     <AndroidResgenFile>Resources\Resource.Designer.cs</AndroidResgenFile>
     <GenerateSerializationAssemblies>Off</GenerateSerializationAssemblies>
@@ -36,6 +36,7 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <DocumentationFile>bin\Release\Xam.Plugin.DownloadManager.Droid.xml</DocumentationFile>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="FormsViewGroup, Version=1.4.0.0, Culture=neutral, processorArchitecture=MSIL">
