--- a/Xam.Plugin.DownloadManager.iOS/Xam.Plugin.DownloadManager.iOS.csproj
+++ b/Xam.Plugin.DownloadManager.iOS/Xam.Plugin.DownloadManager.iOS.csproj
@@ -35,6 +35,7 @@
     <WarningLevel>4</WarningLevel>
     <ConsolePause>false</ConsolePause>
     <CodesignKey>iPhone Developer</CodesignKey>
+    <DocumentationFile>bin\iPhone\Release\Xam.Plugin.DownloadManager.iOS.XML</DocumentationFile>
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="DownloadManager.cs" />
